# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates/rust/ohos_cargo_crate.gni")

ohos_cargo_crate("lib") {
    crate_name = "nix"
    crate_type = "rlib"
    crate_root = "src/lib.rs"

    sources = ["src/lib.rs"]
    edition = "2018"
    cargo_pkg_version = "0.26.2"
    cargo_pkg_authors = "The nix-rust Project Developers"
    cargo_pkg_name = "nix"
    cargo_pkg_description = "Rust friendly bindings to *nix APIs"
    deps = [
        "//third_party/rust/crates/bitflags:lib",
        "//third_party/rust/crates/cfg-if:lib",
        "//third_party/rust/crates/libc:lib",
        "//third_party/rust/crates/memoffset:lib",
        "//third_party/rust/crates/pin-utils:lib",
        "//third_party/rust/crates/static-assertions-rs:lib",
    ]
    features = [
        "acct",
        "default",
        "dir",
        "env",
        "event",
        "feature",
        "fs",
        "hostname",
        "inotify",
        "ioctl",
        "kmod",
        "memoffset",
        "mman",
        "mount",
        "net",
        "personality",
        "pin-utils",
        "poll",
        "process",
        "pthread",
        "ptrace",
        "quota",
        "reboot",
        "resource",
        "sched",
        "signal",
        "socket",
        "term",
        "time",
        "ucontext",
        "uio",
        "user",
        "zerocopy",
    ]
}
