# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/templates/rust/ohos_cargo_crate.gni")

ohos_cargo_crate("lib") {
    crate_name = "nix"
    crate_type = "rlib"
    crate_root = "src/lib.rs"

    sources = ["src/lib.rs"]
    edition = "2021"
    cargo_pkg_version = "0.30.1"
    cargo_pkg_authors = "The nix-rust Project Developers"
    cargo_pkg_name = "nix"
    cargo_pkg_description = "Rust friendly bindings to *nix APIs"
    deps = [
        "//third_party/rust/crates/bitflags:lib",
        "//third_party/rust/crates/cfg-if:lib",
        "//third_party/rust/crates/libc:lib",
        "//third_party/rust/crates/memoffset:lib",
        "//third_party/rust/crates/pin-utils:lib",
    ]
    features = [
        "acct",
        "aio",
        "default",
        "dir",
        "env",
        "event",
        "fanotify",
        "feature",
        "fs",
        "hostname",
        "inotify",
        "ioctl",
        "kmod",
        "memoffset",
        "mman",
        "mount",
        "mqueue",
        "net",
        "personality",
        "poll",
        "process",
        "pthread",
        "ptrace",
        "quota",
        "reboot",
        "resource",
        "sched",
        "signal",
        "socket",
        "syslog",
        "term",
        "time",
        "ucontext",
        "uio",
        "user",
        "zerocopy",
    ]
    module_output_extension = ".rlib"
    part_name = "rust_nix"
    subsystem_name = "thirdparty"
}
